KCINFR-92: Attempting to fix integration test run on Hudson